--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,17 @@ body {
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   min-height: 100vh;
   background: linear-gradient(rgb(75, 121, 161), rgb(40, 62, 81));
+  webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 hr {
   color: #c4c4c4;
   opacity: 0.75;
   border-top: 1.5px solid;
+}
+
+.strike {
+  text-decoration: line-through;
 }
